# multimodal-data-pipeline-etl

./: .env.example  .gitignore  Dockerfile  Dockerfile.jupyter  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: dashboard_monitoring.md  data_dictionary.md  data_exploration_report.md  schema.mmd
notebooks/exploration/: 01_exploration.ipynb  02_prepare_transform.ipynb
notebooks/monitoring/: etl_kpis.ipynb
src/common/: config.py  config.yaml  logging_conf.py  storage.py
src/dags/: etl_multimodal_dag.py
src/load/: db.py  seed_reference.py
src/pipeline/collect/: collection.py
src/pipeline/extract/: extraction.py
src/pipeline/extract/scrapers/: image.py  text.py
src/pipeline/load/: load_data.py
src/pipeline/transform/: README.md  transform_data.py  transform_features.py  transform_pipeline.py
